[FIX] Try to fix samsung's forced dark mode

--- a/src/app/components/AnimatedBackground/styles.module.scss
+++ b/src/app/components/AnimatedBackground/styles.module.scss
@@ -5,7 +5,6 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  z-index: 0;
   background-color: var(--color-white);
 
   .image {
